--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "i": "^0.3.7",
     "next": "13.3.1",
+    "npm": "^9.6.5",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
-    "web3": "^1.9.0"
+    "web3": "^1.9.0",
+    "zustand": "^4.3.7"
   }
 }
